tests/error/struct/struct_var.mml
type s = {c : int; }

let s = {c = 3; } in s.x
